css fix on firefox

--- a/src/assets/css/petfoster.css
+++ b/src/assets/css/petfoster.css
@@ -76,6 +76,8 @@ div:not(#splash-screen, #splash-screen > *):has(> h1)::before {
   width: 100%;
   height: 50px;
   background-image: url(/img/vector/curb.svg);
+  background-size: 100% 50px;
+  background-repeat:no-repeat;
 }
 
 #splash-screen + section + section {
@@ -90,6 +92,8 @@ div:not(#splash-screen, #splash-screen > *):has(> h1)::before {
   width: 100%;
   height: 50px;
   background-image: url(/img/vector/curb2.svg);
+  background-size: 100% 50px;
+  background-repeat:no-repeat;
 }
 
 h1:not(#splash-screen h1) {
